--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="google-site-verification" content="bPeyJ_S-8nWUQOJ-jHeV7UVtUrtM_aln4fud6O-cZHc" />
-  
+<meta name="naver-site-verification" content="5dc71827378ce2831322513559f1a466d4b897b9" />
+    
     <title>중고차보험 등급표 공개, 보험료 비교와 등급 기준 완전 정리</title>
 
   
@@ -882,4 +883,5 @@
 
 </body>
 </html>
+
 
